add title to pages

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Change password' %>
+
 <% content_for :masthead do %>
   <div class="text-center">
     <h1 class="heading my-3">Change your password</h1>
