--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Forgot password' %>
+
 <% content_for :masthead do %>
   <div class="text-center">
     <h1 class="heading my-3">Forgot your password?</h1>
