--- a/app/views/errors/504.html.erb
+++ b/app/views/errors/504.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, '504 Gateway Timeout' %>
+
 <section class="grid h-screen place-items-center px-4">
   <div class="text-center">
     <div class="flex flex-col items-center justify-center gap-3 text-indigo-500/75 dark:text-indigo-500/65">
