--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Sign up' %>
+
 <% content_for :masthead do %>
   <div class="text-center">
     <h1 class="heading my-3">Sign up for an account</h1>
