--- a/app/views/errors/502.html.erb
+++ b/app/views/errors/502.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, '502 Bad Gateway' %>
+
 <section class="grid h-screen place-items-center px-4">
   <div class="text-center">
     <div class="flex flex-col items-center justify-center gap-3 text-rose-500/75">
