--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,4 +1,4 @@
-<title>TeamRunner</title>
+<title><%= content_for?(:title) ? "#{yield(:title)} / TeamRunner" : "TeamRunner" %></title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
