--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Run • #{format_date(@run.date)}" %>
+
 <div class="max-w-3xl px-4 mx-auto my-16">
   <div class="pb-6 border-b border-slate-200 dark:border-slate-700">
     <div class="flex flex-wrap items-center gap-4">
