--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Search' %>
+
 <div class="max-w-3xl px-4 mx-auto my-16">
   <div class="mb-24">
     <div class="pb-6 mt-10 space-y-2">
