--- a/app/views/team_memberships/edit.html.erb
+++ b/app/views/team_memberships/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Edit Team Membership Goals' %>
+
 <div class="max-w-3xl px-4 mx-auto my-16 mb-24">
   <div class="mb-24">
     <div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
