--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Team Settings' %>
+
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="editTab" class="max-w-3xl px-4 mx-auto my-16 mb-24">
   <div class="tab-container">
     <button type="button" id="editTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'editTab' ? 'btn-tab-active' : '' %>">
