--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, 'Teams' %>
+
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="ownedTeamsTab" class="max-w-3xl px-4 mx-auto my-16">
   <div class="tab-container">
     <button type="button" id="ownedTeamsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'ownedTeamsTab' ? 'btn-tab-active' : '' %>">
