feat: redesign team lists

--- a/app/views/teams/index/_membered_teams.html.erb
+++ b/app/views/teams/index/_membered_teams.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 border-b dark:border-slate-700">
+<div class="pb-6 mt-10">
   <h1 class="heading">My Team Memberships</h1>
 </div>
 
