--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -1,7 +1,5 @@
-<div class="divide-y dark:divide-slate-700 dark:text-slate-700">
+<div class="space-y-6">
   <% users.each do |user| %>
-    <div class="py-6">
-      <%= render user %>
-    </div>
+    <%= render user %>
   <% end %>
 </div>
