--- a/app/views/teams/show/_member_list.html.erb
+++ b/app/views/teams/show/_member_list.html.erb
@@ -1,3 +1,5 @@
-<% members.each do |member| %>
-  <%= render 'teams/show/member', team: team, member: member %>
-<% end %>
+<div class="space-y-6">
+  <% members.each do |member| %>
+    <%= render 'teams/show/member', team: team, member: member %>
+  <% end %>
+</div>
