feat: redesign team join request list

--- a/app/views/teams/show/_join_request.html.erb
+++ b/app/views/teams/show/_join_request.html.erb
@@ -1,15 +1,24 @@
-<div class="flex flex-wrap items-center gap-3 py-3 text-slate-800 dark:text-slate-100">
-  <%= link_to request.user, class: 'group flex gap-3 items-center mr-auto' do %>
-    <%= image_tag request.user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' if request.user.avatar.attached? %>
+<div class="bg-slate-50/85 dark:bg-slate-800/85 divide-y rounded-lg border p-4 shadow backdrop-blur-sm dark:divide-slate-700 dark:border-slate-700 dark:shadow-none">
+  <%= link_to request.user, class: 'group flex items-center gap-3 flex-1' do %>
+    <%= image_tag request.user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'shrink-0 size-8 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' if request.user.avatar.attached? %>
 
-    <div>
-      <p class="font-semibold transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= request.user.default_name %></p>
-      <%= content_tag(:p, request.user.username, class: 'help-text') if request.user.display_name.present? %>
+    <div class="flex-1">
+      <p class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= request.user.default_name %></p>
+      <%= content_tag(:p, request.user.username, class: 'text-soft text-sm') if request.user.display_name.present? %>
+    </div>
+
+    <div class="flex shrink-0 items-center gap-3">
+      <%= button_to 'Approve', approve_team_join_request_path(request), method: :patch, class: 'btn btn-sm btn-primary', data: { turbo: false } %>
+      <%= button_to 'Reject', reject_team_join_request_path(request), method: :patch, class: 'btn btn-sm btn-destructive btn-outline', data: { turbo: false } %>
     </div>
   <% end %>
 
-  <div class="flex items-center gap-3">
-    <%= button_to 'Approve', approve_team_join_request_path(request), method: :patch, class: 'btn btn-sm btn-primary', data: { turbo: false } %>
-    <%= button_to 'Reject', reject_team_join_request_path(request), method: :patch, class: 'btn btn-sm btn-destructive btn-outline', data: { turbo: false } %>
-  </div>
+  <% if request.user.any_membered_teams_in_common?(current_user) %>
+    <div class="mt-4 space-y-2 border-t pt-4 dark:border-slate-700">
+      <div class="flex items-start gap-1.5">
+        <%= inline_svg_tag 'icons/team.svg', class: 'size-4 text-soft shrink-0' %>
+        <p class="text-soft text-xs">Member of: <%= list(items: request.user.membered_teams_in_common(current_user).map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %></p>
+      </div>
+    </div>
+  <% end %>
 </div>
