feat: combine search results and order by similarity to query

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,26 +1,24 @@
 <% content_for :title, 'Search' %>
 
-<div class="max-w-3xl px-4 mx-auto my-16">
+<div class="mx-auto my-16 max-w-3xl px-4">
   <div class="mb-24">
-    <div class="pb-6 mt-10 space-y-2">
+    <div class="mt-10 space-y-2 pb-6">
       <h1 class="heading">Search</h1>
       <p class="text-soft">Find new teams or members you are connected with.</p>
     </div>
 
-    <div class="border-b border-slate-200 dark:border-slate-700">
-      <%= form_with url: search_path, method: :get, html: { novalidate: true,}, data: { turbo_frame: 'searchResults', turbo_action: 'advance', turbo_stream: true, controller: 'search-form' } do |form| %>
-        <%= form.label :query, 'Search', class: 'sr-only' %>
+    <%= form_with url: search_path, method: :get, html: { novalidate: true,}, data: { turbo_frame: 'searchResults', turbo_action: 'advance', turbo_stream: true, controller: 'search-form' } do |form| %>
+      <%= form.label :query, 'Search', class: 'sr-only' %>
 
-        <div class="relative form-group">
-          <%= inline_svg_tag 'icons/search.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
-          <%= form.search_field :query, autofocus: true, placeholder: 'Search...', data: { action: 'input->search-form#search' }, class: 'form-input pl-10' %>
-        </div>
-      <% end %>
-    </div>
+      <div class="form-group relative">
+        <%= inline_svg_tag 'icons/search.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
+        <%= form.search_field :query, autofocus: true, placeholder: 'Search...', data: { action: 'input->search-form#search' }, class: 'form-input pl-10' %>
+      </div>
+    <% end %>
 
     <%= turbo_frame_tag 'searchResults' do %>
       <div class="flex flex-col items-center justify-center gap-6 py-12">
-        <p class="prose text-center dark:prose-invert text-soft">Start typing to find teams or other members.</p>
+        <p class="prose dark:prose-invert text-soft text-center">Start typing to find teams or other members.</p>
       </div>
     <% end %>
   </div>
