--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "#{@member.username} • #{@team.name}" %>
+<% content_for :title, "#{@member.default_name} • #{@team.name}" %>
 
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl px-4 mx-auto my-16">
   <div class="pb-6 text-center">
