--- a/app/views/pinned_pages/_list.html.erb
+++ b/app/views/pinned_pages/_list.html.erb
@@ -10,14 +10,28 @@
         <% link_options = { data: { turbo: false }, class: "group sidebar-link #{current_page?(page.page_url) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" } %>
 
         <% link_content = capture do %>
-          <% if (member = User.find_by(id: page.page_url.split('/').last)) && page.page_url.match?(/teams\/\d+\/member\/\d+/) %>
-            <%= image_tag member.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' if member.avatar.attached? %>
-          <% elsif (team = Team.find_by(id: page.page_url.split('/').last)) && page.page_url.match?(/teams\/\d+/) %>
-            <%= image_tag team.photo.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' if team.photo.attached? %>
-          <% elsif (user = User.find_by(id: page.page_url.split('/').last)) && page.page_url.match?(/users\/\d+/) %>
-            <%= image_tag user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' if user.avatar.attached? %>
-          <% end %>
-          <span><%= page.title %></span>
+          <div class="flex items-center gap-2.5">
+            <% if (member = User.find_by(id: page.page_url.split('/').last)) && page.page_url.match?(/teams\/\d+\/member\/\d+/) %>
+              <% if member.avatar.attached? %>
+                <%= image_tag member.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' %>
+              <% else %>
+                <%= inline_svg_tag 'icons/user.svg', class: 'size-4.5 text-soft' %>
+              <% end %>
+            <% elsif (team = Team.find_by(id: page.page_url.split('/').last)) && page.page_url.match?(/teams\/\d+/) %>
+              <% if team.photo.attached? %>
+                <%= image_tag team.photo.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' %>
+              <% else %>
+                <%= inline_svg_tag 'icons/team.svg', class: 'size-5 text-soft' %>
+              <% end %>
+            <% elsif (user = User.find_by(id: page.page_url.split('/').last)) && page.page_url.match?(/users\/\d+/) %>
+              <% if user.avatar.attached? %>
+                <%= image_tag user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-6 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' %>
+              <% else %>
+                <%= inline_svg_tag 'icons/user.svg', class: 'size-4.5 text-soft' %>
+              <% end %>
+            <% end %>
+            <span><%= page.title %></span>
+          </div>
         <% end %>
 
         <%= link_to link_content, page.page_url, **link_options %>
