feat: redesign error messages for team and run forms

--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with model: @run, data: { controller: "form-validation" }, html: { novalidate: true } do |form| %>
+  <%= render 'shared/error_messages', resource: @run %>
+
   <div class="form-group">
     <%= form.label :date, 'What day did you run?', class: 'form-label' %>
     <div class="relative">
